force-app/main/default/objects/Employer__c.object
<CustomObject>
    <label>Employer</label>
    <pluralLabel>Employers</pluralLabel>

    <nameField>
        <label>Employer Name</label>
        <type>Text</type>
    </nameField>


    <!-- Legacy-style: Employer master data is typically back-office controlled -->
    <sharingModel>ReadWrite</sharingModel>

    <!-- Employer_Code__c (Unique external code / legacy key) -->
    <fields>
        <fullName>Employer_Code__c</fullName>
        <label>Employer Code</label>
        <type>Text</type>
        <length>40</length>
        <unique>true</unique>
    </fields>

    <!-- Industry__c -->
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>IT Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
    </fields>

    <!-- Primary Contact -->
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <label>Primary Contact Name</label>
        <type>Text</type>
        <length>80</length>
    </fields>

    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>

    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>

    <!-- Billing / Finance Contact -->
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <label>Billing Contact Email</label>
        <type>Email</type>
    </fields>

    <!-- Address (legacy-style explicit fields rather than Address compound) -->
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <type>Text</type>
        <length>255</length>
    </fields>

    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <type>Text</type>
        <length>255</length>
    </fields>

    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Text</type>
        <length>80</length>
    </fields>

    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Text</type>
        <length>80</length>
    </fields>

    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <type>Text</type>
        <length>20</length>
    </fields>

    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Text</type>
        <length>80</length>
    </fields>

    <!-- Flags -->
    <fields>
        <fullName>Is_Active__c</fullName>
        <label>Is Active</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>

    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>

</CustomObject>